--- a/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
+++ b/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
@@ -15,23 +15,15 @@ From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy
 
 This package contains the communication layer for the native/.NET implementation of the gRPC library (https://github.com/grpc/grpc).
     </Description>
+
+    <!-- Still alpha, since it uses alpha protobuf-net library -->
+    <Version>1.0.0-alpha.1</Version>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <!--<PropertyGroup>
     <CodeAnalysisRuleSet>..\SciTech.Rpc.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
+  </PropertyGroup>-->
   
-  <PropertyGroup>
-    <LangVersion>8.0</LangVersion>
-    <Nullable>enable</Nullable>
-    <NullableContextOptions>enable</NullableContextOptions>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1573;1591</NoWarn>
-  </PropertyGroup>
-
   <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
