--- a/src/Package.props
+++ b/src/Package.props
@@ -5,7 +5,7 @@
     <Copyright>Copyright 2019. SciTech Software AB and TA Instruments, Inc.</Copyright>
     <Company>SciTech Software AB</Company>
     <Authors>SciTechSoftware</Authors>
-    <Version>0.6.1-alpha1</Version>
+    <Version>1.0.0-beta.1</Version>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>rpc grpc http/2 communication</PackageTags>
     <Description>SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels. From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.</Description>
@@ -16,5 +16,20 @@
 * Several other improvements and fixes.     
     </PackageReleaseNotes>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup >
+    <NoWarn>NU5105;$(NoWarn)</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1573;1591;$(NoWarn)</NoWarn>
+  </PropertyGroup>
+
 
 </Project>
