--- a/src/SciTech.Core/SciTech.Core.csproj
+++ b/src/SciTech.Core/SciTech.Core.csproj
@@ -11,28 +11,33 @@
     <Company>SciTech Software AB</Company>
     <Authors>SciTechSoftware</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>0.6.1-alpha1</Version>
+    <Version>1.0.0-beta.1</Version>
     <Description>Contains utility/helper classes used by the SciTech.Rpc project. This 
 package is currently not intended for other use.</Description>
   </PropertyGroup>
 
   <Import Project="..\Platform.props" />
-
-  <PropertyGroup>
-    <CodeAnalysisRuleSet>..\SciTech.Rpc.ruleset</CodeAnalysisRuleSet>
+  
+  <PropertyGroup >
+    <NoWarn>NU5105;$(NoWarn)</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(HasNullableAttributes)' == 'true'">
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <!--<PropertyGroup Condition="'$(HasNullableAttributes)' == 'true'">
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(HasNullableAttributes)' != 'true'">
     <Nullable>annotations</Nullable>
-  </PropertyGroup>
+  </PropertyGroup>-->
+  
   <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
