--- a/test/SciTech.Rpc.Tests/SciTech.Rpc.Tests.csproj
+++ b/test/SciTech.Rpc.Tests/SciTech.Rpc.Tests.csproj
@@ -59,6 +59,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Pipelines.Sockets.Unofficial" Version="2.0.25" />
+    <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
 
 
