--- a/examples/Server/NetGrpcServer/NetGrpcServer.csproj
+++ b/examples/Server/NetGrpcServer/NetGrpcServer.csproj
@@ -18,6 +18,7 @@
     <Compile Include="..\Common\**\*.cs" LinkBase="" />
   </ItemGroup>
 
+
   <ItemGroup>
     <Compile Include="..\..\..\Certs\TestCertificates.Server.cs" Link="TestCertificates.Server.cs" />
   </ItemGroup>
@@ -26,6 +27,13 @@
     <None Include="..\..\..\Certs\server.pfx" Link="server.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.5.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
   </ItemGroup>
 
   <ItemGroup>
