--- a/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
+++ b/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.0;net461;net472</TargetFrameworks>
   </PropertyGroup>  
   
   <Import Project="..\Package.props" />
@@ -37,7 +37,6 @@ This package contains the communication layer for the native/.NET implementation
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Grpc.Core" Version="2.24.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
   </ItemGroup>
 
