--- a/src/SciTech.Rpc.DependencyInjection/SciTech.Rpc.DependencyInjection.csproj
+++ b/src/SciTech.Rpc.DependencyInjection/SciTech.Rpc.DependencyInjection.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.0;net461;net472</TargetFrameworks>
+    <!--<TargetFramework>netcoreapp3.0</TargetFramework>-->
   </PropertyGroup>
 
   <Import Project="..\Package.props" />
