Add RpcBaseException and fix some incorrect exception types.RpcDefinitionException
RpcDefinitionException should only be used during proxy/stub building.

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -17,3 +17,6 @@ dotnet_diagnostic.CA2235.severity = none
 
 # IDE0069: Disposable fields should be disposed
 dotnet_diagnostic.IDE0069.severity = none
+
+# CA1032: Implement standard exception constructors
+dotnet_diagnostic.CA1032.severity = none
