--- a/src/analyzer/SciTech.Rpc.Analyzer/SciTech.Rpc.Analyzer.csproj
+++ b/src/analyzer/SciTech.Rpc.Analyzer/SciTech.Rpc.Analyzer.csproj
@@ -28,8 +28,8 @@ This package contains a Roslyn analyzer that detects incorrect RPC service defin
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.7" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.3.1" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.8" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.4.0" PrivateAssets="all" />
     <PackageReference Update="NETStandard.Library" PrivateAssets="all" />
   </ItemGroup>
 
@@ -46,6 +46,15 @@ This package contains a Roslyn analyzer that detects incorrect RPC service defin
       <PackagePath></PackagePath>
     </None>
     <None Include="RpcAnalyzerCodeFixProvider.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="tools\install.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="tools\uninstall.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
