--- a/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
+++ b/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
       <!--<TargetFramework>netcoreapp3.0</TargetFramework>-->
-      <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.0;net461;net472</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net472;netcoreapp3.1;net5.0</TargetFrameworks>
     </PropertyGroup>
 
     <Import Project="..\Package.props" />
