Remove RpcResponseWithError and all uses of it.
Now all tests pass, but more cleanup is still needed.

--- a/src/SciTech.Rpc.NetGrpc/SciTech.Rpc.NetGrpc.csproj
+++ b/src/SciTech.Rpc.NetGrpc/SciTech.Rpc.NetGrpc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
   <Import Project="..\Package.props" />
@@ -40,7 +40,7 @@ This package contains the communication layer for the fully managed ASP.NET Core
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.23.2" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.24.0" />
     
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
