--- a/src/Platform.props
+++ b/src/Platform.props
@@ -74,7 +74,7 @@
   <PropertyGroup Condition="'$(HasCollectibleAssemblies)' == 'true'">
     <DefineConstants>$(DefineConstants);PLAT_SUPPORT_COLLECTIBLE_ASSEMBLIES</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(HasSystemSslProtocols)' == 'true'">
+  <PropertyGroup Condition="'$(HasNetGrpc)' == 'true'">
     <DefineConstants>$(DefineConstants);PLAT_NET_GRPC</DefineConstants>
   </PropertyGroup>
 </Project>
