--- a/src/SciTech.Core/SciTech.Core.csproj
+++ b/src/SciTech.Core/SciTech.Core.csproj
@@ -6,7 +6,7 @@
   
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Copyright>Copyright 2019. SciTech Software AB</Copyright>
+    <Copyright>Copyright 2020. SciTech Software AB</Copyright>
     <Company>SciTech Software AB</Company>
     <Authors>SciTechSoftware</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -28,6 +28,7 @@ package is currently not intended for other use.</Description>
   <PropertyGroup>
     <Nullable>enable</Nullable>
     <RootNamespace>SciTech</RootNamespace>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <!--<PropertyGroup Condition="'$(HasNullableAttributes)' == 'true'">
@@ -46,10 +47,6 @@ package is currently not intended for other use.</Description>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" />
   </ItemGroup>
