--- a/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
+++ b/src/SciTech.Rpc.DataContract/SciTech.Rpc.DataContract.csproj
@@ -16,6 +16,7 @@
         This package contains the core SciTech.Rpc implementation and should normally not be added separately.
         Use one of the SciTech.Rpc implementation packages: SciTech.Rpc.Grpc, SciTech.Rpc.NetGrpc, SciTech.Rpc.Pipelines.
       </Description>
+      <EnableNETAnalyzers>true</EnableNETAnalyzers>
     </PropertyGroup>
 
     <ItemGroup>
@@ -26,10 +27,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
       <PackageReference Include="System.ServiceModel.Primitives" Version="4.7.0" />
     </ItemGroup>
 
