--- a/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
+++ b/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
@@ -21,6 +21,7 @@ This package contains the client communication layer for the fully managed ASP.N
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);FEATURE_NET_GRPC</DefineConstants>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
