--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -20,3 +20,9 @@ dotnet_diagnostic.IDE0069.severity = none
 
 # CA1032: Implement standard exception constructors
 dotnet_diagnostic.CA1032.severity = none
+
+dotnet_diagnostic.CA1805.severity = none
+
+# CA1508: Avoid dead conditional code
+# Currently a lot of false positives (e.g. 'collection as IReadOnlyList<T>' is never 'null'. Remove or refactor the condition(s) to avoid dead code.)
+dotnet_diagnostic.CA1508.severity = none
