--- a/src/SciTech.Rpc.Protobuf/SciTech.Rpc.Protobuf.csproj
+++ b/src/SciTech.Rpc.Protobuf/SciTech.Rpc.Protobuf.csproj
@@ -13,9 +13,6 @@ From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy
 
 This package contains a Protobuf serializer (SciTech.Rpc.Serialization.ProtobufSerializer) that is used as the default serializer by the Grpc and NetGrpc implementations of SciTech.Rpc.
     </Description>
-
-    <!-- Still alpha, since it uses alpha protobuf-net library -->
-    <Version>1.0.0-alpha.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,7 +27,7 @@ This package contains a Protobuf serializer (SciTech.Rpc.Serialization.ProtobufS
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="protobuf-net" Version="3.0.0-alpha.174.gc21f7fafd1" />
+    <PackageReference Include="protobuf-net" Version="3.0.73" />
   </ItemGroup>
 
   <ItemGroup>
