--- a/src/SciTech.Core/SciTech.Core.csproj
+++ b/src/SciTech.Core/SciTech.Core.csproj
@@ -10,9 +10,14 @@
     <Company>SciTech Software AB</Company>
     <Authors>SciTechSoftware</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>1.0.0-beta.8</Version>
+    <Version>1.0.0-beta.10</Version>
     <Description>Contains utility/helper classes used by the SciTech.Rpc project. This 
 package is currently not intended for other use.</Description>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>IDT002;1573;1591;$(NoWarn)</NoWarn>
   </PropertyGroup>
 
   <Import Project="..\Platform.props" />
